# EEL6814-NN

./: .gitignore  README.md  pyproject.toml
hw1/: hw1.ipynb  pyproject.toml
hw2/: hw2.html  hw2.ipynb
hw3/: hw3.html  hw3.ipynb
hw4/: hw4.html  hw4.ipynb
hw5/: digits.npz  hw5.html  hw5.ipynb
project1/: checkpoint.pt  cnn_project1.ipynb  cnn_project1_cnn.ipynb  cnn_project1_keras.ipynb  cnn_project1_sopcnn.ipynb  cnn_writeup_eel.docx  graph.gv
project2/: project2 copy.ipynb  project2.ipynb
