[tool.poetry]
name = "eel6814-nn"
version = "0.1.0"
description = ""
authors = ["Brandon Wand <wandbrandon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12, <3.13"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
nbconvert = "^7.16.4"
ucimlrepo = "^0.0.7"
torch = "^2.5.1"
keras = "^3.6.0"
torchvision = "^0.20.0"
pydot = "^3.0.2"
graphviz = "^0.20.3"
torchlens = "^0.1.23"
imageio = "^2.36.0"
mlx = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
