[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Brandon Wand <wandbrandon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
nbconvert = "^7.16.4"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
